Commit structure file

--- a/arrays.html
+++ b/arrays.html
@@ -2,7 +2,7 @@
 
 //Exercise 1:
 
-//Print the type of a string and the type of an array
+//Print the type of any string and the type of any array
 
 //Example code
 console.log(Array.isArray('w3resource')); 
