--- a/arrays.html
+++ b/arrays.html
@@ -4,27 +4,40 @@
 
 //Print the type of any string and the type of any array
 
-//Example code
-console.log(Array.isArray('w3resource')); 
-console.log(Array.isArray([1, 2, 4, 0]));
+//Expected Input:
 
-//Expected Output
-/*false
-true */
+//Exercise 1:
+//Print the element of the array ['apple','banana','pear','watermelon']
+//Expected Input 1:
+//0
 
-//Exercise 2:
+//Expected Output 1:
+//apple
 
-//Print the first element of the array
+//Expected Input 2:
+//2
 
-fruits = ['apple','banana','pear','watermelon']
+//Expected Output 2:
+//pear
 
-//Example code
-console.log(fruits[0]); 
+//Type yoour code below:
+function fruit_basket(n) {
+  fruits = ['apple','banana','pear','watermelon']
+  return fruits[n]
+
+}
+
+console.log(fruit_basket(0))
+
+//console.log(fruits[0]);
+
+
+//FINISH THIS LATER!!!!!!!!!!!!!!!!1
 
 //Print the last element of an array without manually counting how many elements there are
 
 //Example code
-console.log(fruits[fruits.length - 1]); 
+//console.log(fruits[fruits.length - 1]);
 
 //Exercise 3
 
